Добавление и удаление доменов и субдоменов
